# housing-scraper

./: .gitignore  README.md  alembic.ini  config.py  db.py  logging_utils.py  main.py  models.py  network_usage.py  properties.db  pyproject.toml  scraper.py  scraper_utils.py  test-playwright-stealth.py
.github/: copilot-instructions.md
db/: db.py  models.py
logs/: failure_20260113005443540733.html  failure_20260113005443704740.html
migrations/: env.py
migrations/versions/: 20260130_000001_initial_and_properties_to_listings.py  20260130_000002_add_listings_prices.py
scripts/: create_database.py
src/: main.py  scraper.py
src/backend/: main.py
src/backend/auth/: __init__.py  security.py
src/backend/middlewares/: __init__.py  logged_in.py
src/backend/routers/: __init__.py  auth.py  listings.py  users.py
src/db/: __init__.py  db.py  models.py  session.py
src/db/models/: __init__.py  listing_price.py  property.py  user.py
src/scraper/: config.py  main.py  scraper.py
src/utils/: network_usage.py  scraper.py  strings.py
tests/: conftest.py  test_auth.py  test_listing_prices.py  test_logging_utils.py  test_scraper_utils.py  test_strings.py
utils/: __init__.py  console.py  logging.py  strings.py
